--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ a {
 	justify-content: space-between;
 }
 
-.main-header-logo: {
+.main-header-logo {
 	width: 160px;
 }
 
@@ -65,7 +65,6 @@ a {
 	vertical-align: bottom;
 }
 
-
 .menu-item-current  a{
 	border-bottom: 2px solid #fb565a;
 }
@@ -88,7 +87,6 @@ a {
 .busket:focus{
 	color: #fb565a;
 }
-
 
 .menu-item a:active,
 .busket:active
@@ -1527,6 +1525,7 @@ label.label-net:focus::before {
 .filter-btn:active {
 	outline: none;
 } 
+
 .pagination-item a:active,
 .next-pagination-item:active,
 .filter-btn:active {
@@ -1538,7 +1537,6 @@ label.label-net:focus::before {
 .next-pagination-item {
 	width: 234px;
 }
-
 
 .pagination-item-current a,
 .pagination-item-current a:hover,
