--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ a {
 
 .menu-item  a{
 	margin: auto 23px;
-	displaye: inline-block;
+	display: inline-block;
 	padding: 15px 0;
 	
 	text-transform: uppercase;
@@ -72,7 +72,7 @@ a {
 .busket {
 	position: relative;
 	
-	margin: auto 0px;
+	margin: auto 0;
 	padding: 10px 0;
 	width: 160px;
 	
@@ -321,7 +321,13 @@ a {
 	margin: 0;
 	margin-bottom: 14px;
 	
+	font-size: 24px;
+	line-height: 30px;
+	font-weight: 700;
+	color: #000000;
 	text-transform: uppercase;
+	
+	background-color: #ffffff;
 }
 
 .service-item p {
@@ -391,16 +397,7 @@ a {
 .presentations .btn:active {
 	color: rgba(255, 255, 255, 0.3);
 	
-	background-color: e5a722;
-}
-
-.service-item h3 {
-	font-size: 24px;
-	line-height: 30px;
-	font-weight: 700;
-	color: #000000;
-	
-	background-color: #ffffff;
+	background-color: #e5a722;
 }
 
 .self-determination {
@@ -585,7 +582,7 @@ a {
 
 .contacts p {
 	position: absolute;
-	left: 0px;
+	left: 0;
 	top: -364px;
 	
 	width: 220px;
@@ -703,8 +700,8 @@ a {
 }
 
 .social-info p {
-	paddin: 0px;
-	margin: 0px;
+	padding: 0;
+	margin: 0;
 	padding-top: 10px;
 	
 	color: #444444;
@@ -747,7 +744,7 @@ a {
 	padding: 70px 100px 86px 100px;
 	z-index: 40;
 	
-	box-shadow: 0px 20px 40px 7px rgba(0, 0, 0, 0.75);
+	box-shadow: 0 20px 40px 7px rgba(0, 0, 0, 0.75);
 	background-color: #ffffff;
 }
 
@@ -878,7 +875,7 @@ a {
 	
 	position: absolute;
 	top: 8px;
-	left: 0px;
+	left: 0;
 	
 	width: 21px;
 	height: 4px;
@@ -893,7 +890,7 @@ a {
 	
 	position: absolute;
 	top: 8px;
-	left: 0px;
+	left: 0;
 	
 	width: 21px;
 	height: 4px;
@@ -1253,7 +1250,7 @@ label.label-net:focus::before {
 .sort-item {
 	margin-right:25px;
 	
-	text-alin: left;
+	text-align: left;
 }
 
 .sort-input-radio {
@@ -1310,7 +1307,7 @@ label.label-net:focus::before {
 	left: 20px;
 	
 	width: 1px;
-	height: 0px;
+	height: 0;
 	
 	font-size: 0;
 	
@@ -1324,10 +1321,10 @@ label.label-net:focus::before {
 .order-label[for="increase"] {
 	position: absolute;
 	bottom: 6px;
-	right: 0px;
+	right: 0;
 	
 	width: 1px;
-	height: 0px;
+	height: 0;
 	
 	font-size: 0;
 	
@@ -1384,7 +1381,7 @@ label.label-net:focus::before {
 	position: relative;
 	
 	display: flex;
-	justify-content: start;
+	justify-content: flex-start;
 	padding: 0;
 	margin: 0;
 	height: 40px;
@@ -1406,8 +1403,8 @@ label.label-net:focus::before {
 	border: none;
 	border-radius: 50%;
 	background-color: #ffffff;
-	box-shadow: 26px 0px 0px 0px #ffffff,
-				52px 0px 0px 0px #ffffff;
+	box-shadow: 26px 0 0 0 #ffffff,
+		    52px 0 0 0 #ffffff;
 }
 
 .catalog-item {
@@ -1423,7 +1420,7 @@ label.label-net:focus::before {
 
 .catalog-item:hover,
 .catalog-item:focus {
-	box-shadow: 0px 6px 15px 0px rgba(0, 0, 0, 0.25);
+	box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.25);
 }
 
 .catalog-item-details{
@@ -1503,7 +1500,7 @@ label.label-net:focus::before {
 	
 	line-height: 44px;
 	text-align: center;
-	vertical-align: middle;
+	//vertical-align: middle;
 	
 	border-radius: 3px;
 	background-color: #eeeeee;
