--- a/css/style.css
+++ b/css/style.css
@@ -1493,7 +1493,7 @@ label.label-net:focus::before {
 }
 
 .pagination-item a{
-	display: inline-block;
+	display: block;
 	min-width: 50px;
 	height: 50px;
 	
